# laba

labaProga/: CMakeLists.txt  CastomButton.qml  Main.qml  OutRes.qml  datamanager.cpp  datamanager.h  doptask.cpp  doptask.h  intvalidator.cpp  intvalidator.h  iteration.cpp  iteration.h  main.cpp  recursionVar1.cpp  recursionVar1.h  treenode.cpp  treenode.h
untitled1/: tst.cpp  tst1.cpp  tst2.cpp  tst3.cpp  tst_test.cpp  untitled1.pro
отчёт/: ~$отчёт.docx  отчёт исправленный.docx  отчёт.docx
отчёт/Блок схемы/: iter1.drawio  iter2.drawio  recursion1.drawio  recursion2.drawio
